[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mote"
version = "0.1.0"
description = "Mote - Swedish meeting transcription"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.3",
    "tomlkit>=0.13",
    "sounddevice>=0.5.5",
    "numpy>=2.0",
    "faster-whisper>=1.2.1",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]

[project.scripts]
mote = "mote.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mote"]

[tool.pytest.ini_options]
testpaths = ["tests"]
