[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mote"
version = "0.1.0"
description = "Mote - Swedish meeting transcription"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.3",
    "tomlkit>=0.13",
    "sounddevice>=0.5.5",
    "numpy>=2.0",
    "faster-whisper>=1.2.1",
    "onnxruntime<1.24",
    "rich>=13",
    "openai>=2.29.0",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "google-auth>=2.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]

[project.scripts]
mote = "mote.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mote"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
